argocd/vaultwarden/manifests/bw-sync.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bitwarden-sync
  name: bitwarden-sync
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: bitwarden-sync
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: bitwarden-sync
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
      containers:
        - image: docker.io/reaper0x1/bitwarden-portal:1.0.2@sha256:a1502fa9af9537e537dc1aa6e189fd39ed8c690fd6eecbd8cb9a0ca10b26b3ea
          imagePullPolicy: Always
          name: bitwarden-sync
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              memory: 500Mi
          securityContext:
            runAsUser: 0
            runAsGroup: 0
      restartPolicy: Always
