argocd/vaultwarden/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vaultwarden
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress: []
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bitwarden-sync
spec:
  endpointSelector:
    matchLabels:
      app: bitwarden-sync
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: vaultwarden
            k8s:app.kubernetes.io/name: vaultwarden
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
  ingress:
    - fromEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: vaultwarden
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
